--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,75 @@
+@import url('https://fonts.googleapis.com/css2?family=Maven+Pro:wght@400;500;600;700;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
+
+.font-monserrat {
+  font-family: 'Montserrat', sans-serif;
+}
+
+.font-maven {
+  font-family: 'Maven Pro', sans-serif;
+}
+
 .App {
   text-align: center;
 }
 
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
+}
+
+.outside {
+  border: 1px solid #00A89E;
+  border-radius: 10px;
+}
+
+.outside-box__control {
+  border: 1px solid #00A89E !important;
+}
+
+.outside-box__placeholder {
+  text-align: left;
+  color: rgba(255, 255, 255, 0.78);
+  font-style: normal;
+  font-weight: 400;
+  font-family: 'Maven Pro', sans-serif;
+  font-size: 20px;
+  margin-left: 10px;
+}
+
+.outside-box__value-container {
+  background: #312528;
+}
+
+
+.outside-box__single-value {
+  color: rgba(255, 255, 255, 0.78) !important;
+}
+
+.outside-box__option {
+  background: transparent !important;
+}
+
+.outside-box__option:active,
+.outside-box__option:focus,
+.outside-box__option:hover {
+  background: #00A89E !important;
+}
+
+.outside-box__menu {
+  font-family: 'Maven Pro', sans-serif;
+  background: #312528;
+  color: rgba(255, 255, 255, 0.78);
+}
+
+.outside-box__menu-list {
+  background: #312528;
+  border: 1px solid #00A89E !important;
+}
+
+.outside-box__indicators {
+  background: #312528;
 }
 
 @media (prefers-reduced-motion: no-preference) {
