fixes: fix response box

--- a/src/App.css
+++ b/src/App.css
@@ -94,6 +94,10 @@
   border-radius: 10px !important;
 }
 
+.outside-response {
+  min-height: 132px;
+}
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
